fixed misaligned name in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,8 @@ font-size: 24px;
 
 #hero h1 {
   margin: 0 0 40px 0;
-  font-size: 30px !important;
+  margin-bottom: 10px;
+  font-size: 2.5vw !important;
   font-weight: 400;
   line-height: 50px;
   color: #fff;
